syntax = "proto3";

package user;
option go_package = "./user/";

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string balance = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message GetUserRequest {
  string id = 1;
}

message UpdateBalanceRequest {
  string user_id = 1;
  string new_balance = 2;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc GetUser(GetUserRequest) returns (User);
  rpc UpdateBalance(UpdateBalanceRequest) returns (User);
}
